--- a/src/pages/Upload.page
+++ b/src/pages/Upload.page
@@ -1,3 +1,3 @@
-<apex:page showHeader="true" sidebar="true">
+<apex:page showHeader="true" sidebar="true" controller="UploadController">
 	
 </apex:page>
