--- a/src/components/Upload.component
+++ b/src/components/Upload.component
@@ -1,3 +1,3 @@
-<apex:component >
-
+<apex:component controller="UploadController">
+	<apex:attribute name="parentId" description="The Id of record uploaded files" type="String" required="true"/>
 </apex:component>
